# 2026-goals

./: .gitignore  .mcp.json  Conversation.md  Gemfile  Goals.md  README.md  _config.yml  agent-usage-guide.md  index.md
.claude/skills/: goal-actionalizer.md  goals.md
Hindi/: index.md  overview.md
Hindi/chapters/: index.md
Hindi/practice/: anki-chapters-1-3.csv  realtime-api-prompt.md
Hindi/weeks/: index.md  week-1.md  week-2.md
_data/: current.yml  daily.yml  goals.yml  memory.yml  schedule.yml
_data/logs/: brother.yml  calendar.yml  fitness.yml  hindi.yml  sell.yml  spend-less.yml  trading.yml  work-boundaries.yml
_includes/: todo-list.html  week-card.html  week-history.html
brother/: index.md
calendaring/: index.md  overview.md
calendaring/weeks/: week-0-setup.md  week-1-tasks.md  week-2-tasks.md  week-3-tasks.md  week-4-tasks.md  week-5-tasks.md  (+1 more)
docs/: design.md
fitness/: index.md  overview.md
mcp-server/: Dockerfile  docker-compose.yml  pyproject.toml
mcp-server/src/goals_mcp/: __init__.py  anki.py  auth.py  calendar_service.py  claude.py  gist.py  git.py  goals.py  pushover.py  server.py  storage.py  tasks_service.py  tools.py  wger_service.py
scripts/: anki_import.py  extraction_gemini-3-flash-preview.json  fix_devanagari.py  hindi_schemas.py  merge_extractions.py  test_extraction.py
sell/: anuska-pc.md  index.md  mini-pc.md  old-dryer.md  old-tv.md  overview.md  roombas.md  uconsole.md
spend-less/: index.md  overview.md
trading/: index.md  overview.md
updates/: history.md  index.md
work-boundaries/: index.md  overview.md
(+105 files in other folders)
