[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goals-2026-mcp"
version = "0.1.0"
description = "MCP server for 2026 goals tracking"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "starlette",
    "uvicorn",
    "sse-starlette",
    "gcsa>=2.3.0",
    "google-api-python-client>=2.0.0",
    "pymupdf>=1.26.7",
    "marker-pdf>=1.10.1",
    "psutil>=7.2.1",
    "instructor>=1.12.0",
    "openai>=1.109.1",
    "google-generativeai>=0.8.6",
    "grpcio>=1.76.0",
]

[project.scripts]
goals-mcp = "goals_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/goals_mcp"]
